--- a/tienda/templates/base_tienda.html
+++ b/tienda/templates/base_tienda.html
@@ -193,7 +193,72 @@
 <!-------------------------------------------Fin Barra superior--------------------------------------------------------------------------------->       
                 </div>
 <!-------------------------------------------Barra direcciones---------------------------------------------------------------------------------->       
-                <div class="row wrapper border-bottom white-bg page-heading">
+<!--------------------------------------------------Carrusel----------------------------------------------------------------------------------->       
+<div class="col-lg-10">
+    <nav class="navbar navbar-default navbar-expand-md" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+                    <i class="fa fa-bars"></i>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse justify-content-end" id="navbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a class="nav-link page-scroll" href="/#page-top">Home</a></li>
+                    <li><a class="nav-link page-scroll" href="/blog/home">Blog</a></li>
+                    <li><a class="nav-link page-scroll" href="/tienda/verproducto">Tienda</a></li>
+                    <li><a class="nav-link page-scroll" href="/#features">Pages</a></li>
+                    <li><a class="nav-link page-scroll" href="/#team">Nosotros</a></li> 
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="inSlider" class="carousel slide" data-ride="carousel" >
+        <ol class="carousel-indicators">
+            <li data-target="#inSlider" data-slide-to="0" class="active"></li>
+            <li data-target="#inSlider" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <div class="container">
+                    <div class="carousel-caption" style="text-align:right;">
+                        <h1 style="color:black ;">Quieres Saber todo<br/>
+                            sobre el mundo de los autos<br/>
+                            mira el blog<br/>
+                            ViCar</h1>
+                        <p>
+                            <a class="btn btn-lg btn-primary" href="/#team" role="button">Quienes somos</a>
+                        </p>
+                    </div>
+                    <div class="carousel-image wow zoomIn">
+                        <img src="/static/assets/img/landing/tablero.png" alt="tablero"/>
+                    </div>
+                </div>
+                <!-- Set background for slide in css -->
+                <div class="header-back one"></div>
+
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="carousel-caption blank">
+                    </div>
+                </div>
+                <!-- Set background for slide in css -->
+                <div class="header-back two"></div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#inSlider" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#inSlider" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+<!--------------------------------------------------Fin Carrusel---------------------------------------------------------------------------------->       
+                 <div class="row wrapper border-bottom white-bg page-heading">
                     {% block direcciones%}
                     
                     {% endblock %}
@@ -207,11 +272,7 @@
  
 {% endblock %}
 <!--------------------------------------------------Footer-------------------------------------------------------------------------------------->       
-                <div class="footer">
-                    <div>
-                        <strong>Copyright</strong> Example Company &copy; 2014-2018
-                    </div>
-                </div>
+                
 <!-------------------------------------------------Fin Footer----------------------------------------------------------------------------------->       
             </div>
         </div>
@@ -229,6 +290,61 @@
 
 <!-- Jasny -->
 <script src="{% static 'js/plugins/jasny/jasny-bootstrap.min.js' %}"></script>
+
+<script>
+
+    $(document).ready(function () {
+
+        $('body').scrollspy({
+            target: '#navbar',
+            offset: 80
+        });
+
+        // Page scrolling feature
+        $('a.page-scroll').bind('click', function(event) {
+            var link = $(this);
+            $('html, body').stop().animate({
+                scrollTop: $(link.attr('href')).offset().top - 50
+            }, 500);
+            event.preventDefault();
+            $("#navbar").collapse('hide');
+        });
+    });
+
+    var cbpAnimatedHeader = (function() {
+        var docElem = document.documentElement,
+                header = document.querySelector( '.navbar-default' ),
+                didScroll = false,
+                changeHeaderOn = 200;
+        function init() {
+            window.addEventListener( 'scroll', function( event ) {
+                if( !didScroll ) {
+                    didScroll = true;
+                    setTimeout( scrollPage, 250 );
+                }
+            }, false );
+        }
+        function scrollPage() {
+            var sy = scrollY();
+            if ( sy >= changeHeaderOn ) {
+                $(header).addClass('navbar-scroll')
+            }
+            else {
+                $(header).removeClass('navbar-scroll')
+            }
+            didScroll = false;
+        }
+        function scrollY() {
+            return window.pageYOffset || docElem.scrollTop;
+        }
+        init();
+
+    })();
+
+    // Activate WOW.js plugin for animation on scrol
+    new WOW().init();
+
+</script>
 
 {% block scripts %} {% endblock %}
 </body>
